# Fetch_Receipt_Processor_Challenge

./: Dockerfile  README.md  pyproject.toml  requirements.txt
receipt_processor/: main.py
receipt_processor/internal/: point_processor.py
receipt_processor/models/: receipt.py
receipt_processor/routes/: receipts.py
tests/: test_internal.py  test_receipt_route.py
