[tool.poetry]
name = "fetch-receipt-processor-challenge"
version = "0.1.0"
description = ""
authors = ["Elan Moyal <dev.elanmoyal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
